# treehacks2026

./: README.md  STORY.md  next.config.ts  package-lock.json  package.json  pyproject.toml  temp_floorplan.txt
app/: globals.css  layout.tsx  page.tsx
app/agent/: page.tsx
app/components/: AtriaLogo.tsx  FloorPlanGrid.tsx  Globe3D.tsx  Header.tsx  HospitalLoadingOverlay.tsx  HospitalMap3D.tsx  LayoutWithHospitalLoading.tsx  PatientView.tsx  ProviderView.tsx  schedule-email-template.tsx
app/context/: HospitalLoadingContext.tsx
app/hospital/: page.tsx
app/lib/: scheduleData.ts
app/loading/: page.tsx
app/patient/: page.tsx
data/: patient_visit_summaries.json
models/: demo_patients_predictions.csv  model_inference.py  task1_features.json  task1_test_perf.csv  task2_features.json  task2_test_perf.csv  test_demo_patients.py  train_1.py  train_2.py
my_crew/: .gitignore  README.md  pyproject.toml  report.md
my_crew/data/: nurse_roster.json  task2_features.json
my_crew/data/audio/: README.md
my_crew/output/: final_allocations.json  hospital_space.json  nurse_view.json  patient_view.json
my_crew/saved_models/: task1_fl_model.pkl  task2_fl_model.pkl
my_crew/src/my_crew/: crew.py  csv_pipeline.py  event_stream.py  main.py  model_inference.py  output_schemas.py  output_writer.py  voice_agent.py
my_crew/src/my_crew/config/: agents.yaml  tasks.yaml
my_crew/src/my_crew/tools/: __init__.py  filter_resources_tool.py  greedy_allocation_tool.py  predict_bed_need_tool.py  predict_length_of_stay_tool.py
my_crew/tests/: test_two_batches_25.py
(+42 files in other folders)
